--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,66 +1,83 @@
+$primary-color: #181818;
+$secondary-color: #8f8f8f;
+$red: #df4242;
+$blue: #3739e2;
+$yellow: #d6d613;
+$white: #fff;
+
 *,
 *::before,
 *::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 html {
-  font-size: 16px;
-  scroll-behavior: smooth;
+	font-size: 16px;
+	scroll-behavior: smooth;
 }
-  
+
 body {
-  min-height: 100%;
-  background-color: #e8e8e8;
-  color: #181818;
-} 
+	min-height: 100%;
+	background-color: #e8e8e8;
+	color: $primary-color;
+}
 
 body.open {
-  overflow: hidden;
+	overflow: hidden;
 }
 
-h1, h2, h3, h4, h5, h6, strong, .header__link {
-  font-family: 'Space Mono', monospace;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+strong,
+.header__link {
+	font-family: 'Space Mono', monospace;
 	font-weight: 500;
-	background: -webkit-linear-gradient(left, var(--mainText), var(--secondaryText));
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
 }
 
-p, li, span, label, input, textarea{
-	color: var(--mainText);
-  font-family: 'Roboto Mono', monospace;
-  border: none;
-  outline: none;
+p,
+li,
+span,
+label,
+input,
+textarea {
+	color: $primary-color;
+	font-family: 'Roboto Mono', monospace;
+	border: none;
+	outline: none;
 }
 
-a{
+a {
 	text-decoration: none;
+	color: $primary-color;
+	font-family: 'Roboto Mono', monospace;
 }
 
-ul{
+ul {
 	list-style: none;
 }
 
 select {
-  outline: none;
-  border: none;
-  appearance: none;
-  background: inherit;
-  cursor: pointer;
-  font-size: 12px;
-  align-self: flex-start;
-  color: inherit;
-  margin-left: 20px;
+	outline: none;
+	border: none;
+	appearance: none;
+	background: inherit;
+	cursor: pointer;
+	font-size: 12px;
+	align-self: flex-start;
+	color: inherit;
+	margin-left: 20px;
 }
 
 select:hover {
-  color: var(--secondaryText);
+	color: $secondary-color;
 }
 
 table {
-  border-collapse: collapse;
+	border-collapse: collapse;
 }
